add Colors & Types page

--- a/src/headers_&_footers/headers_&_footers.pug
+++ b/src/headers_&_footers/headers_&_footers.pug
@@ -1,7 +1,7 @@
 header.header#header
     .container
         .header-content
-            img.logo(src="../src/images/Logo.svg" alt="Logo")
+            img.logo(src="../src/images/logo.svg" alt="Logo")
             ul.menu
                 li
                     a.menu__item.menu__item_active(href="#") О нас
