add "file-loader" for images

--- a/src/form_elements/form_elements.pug
+++ b/src/form_elements/form_elements.pug
@@ -22,7 +22,7 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                 form.form-field
                     button(type="button").form-field__input.type-body
                         span.dropdown-text Сколько гостей
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
         .form-wrapper.form-wrapper--margin
             .form-box
                 .form-caption
@@ -36,14 +36,14 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                 form.form-field.form-field--sm
                     button(type="button").form-field__input.type-body
                         span.dropdown-text ДД.ММ.ГГГГ
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
             .form-box
                 .form-caption
                     span.form-caption__title.type-h3 Date Dropdown
                 form.form-field.form-field--sm
                     button(type="button").form-field__input.type-body
                         span.dropdown-text 19.08.2019
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
         .form-wrapper.form-wrapper--margin
             .form-box
                 .form-caption
@@ -51,7 +51,7 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                 form.form-field.form-field--md
                     button(type="button").form-field__input.type-body
                         span.dropdown-text 19 авг - 23 авг
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
         .form-wrapper.form-wrapper--margin
             .form-box
                 .form-caption
@@ -184,7 +184,7 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                 form.form-field.form-field--md
                     button(type="button").form-field__input.type-body
                         span.dropdown-text 2 спальни, 2 кровати...
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
         .form-wrapper.form-wrapper--margin
             .form-box.form-field--md
                 .form-caption
@@ -193,31 +193,31 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                 form.form-field.form-field--md.form-field--expanded
                     button(type="button").form-field__input.form-field__dropdown.type-body
                         span.dropdown-text 2 спальни, 2 кровати...
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
                     .dropdown-item
                         span.type-h3 Спальни
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus.svg" alt="Minus")
+                                img(src="images/minus.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 2
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-item
                         span.type-h3 Кровати
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus.svg" alt="Minus")
+                                img(src="images/minus.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 2
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-item
                         span.type-h3 Ванные Комнаты
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus_disabled.svg" alt="Minus")
+                                img(src="images/minus_disabled.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 0
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
     .form-elements-cell
         .form-wrapper
             .form-box.form-field--md
@@ -231,26 +231,26 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                         span.type-h3 Взрослые
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus_disabled.svg" alt="Minus")
+                                img(src="images/minus_disabled.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 0
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-item
                         span.type-h3 Дети
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus_disabled.svg" alt="Minus")
+                                img(src="images/minus_disabled.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 0
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-item
                         span.type-h3 Младенцы
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus_disabled.svg" alt="Minus")
+                                img(src="images/minus_disabled.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 0
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-buttons
                         button(type="button").button--link.dropdown-accept.type-h3 Применить
     .form-elements-cell
@@ -261,31 +261,31 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
                 form.form-field.form-field--expanded
                     button(type="button").form-field__input.form-field__dropdown.type-body
                         span.dropdown-text.type-body Сколько гостей
-                        img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                        img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
                     .dropdown-item
                         span.type-h3 Взрослые
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus.svg" alt="Minus")
+                                img(src="images/minus.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 2
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-item
                         span.type-h3 Дети
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus.svg" alt="Minus")
+                                img(src="images/minus.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 1
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-item
                         span.type-h3 Младенцы
                         .dropdown-counter
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/minus_disabled.svg" alt="Minus")
+                                img(src="images/minus_disabled.svg" alt="Minus")
                             .dropdown-counter__result.type-h3 0
                             button(type="button").dropdown-counter__button
-                                img(src="/src/images/plus.svg" alt="Plus")
+                                img(src="images/plus.svg" alt="Plus")
                     .dropdown-buttons
                         button(type="button").button--link.type-h3 Применить
                         button(type="button").button--link.type-h3 Очистить
@@ -294,12 +294,12 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
             .form-box
                 .check__list.check__list__title
                     span.type-h3 Expandable Checkbox List
-                    img(src="/src/images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
+                    img(src="images/dropdown_arrow_down.svg" alt="Dropdown").dropdown-arrow
         .form-wrapper.form-wrapper--md.form-wrapper--margin
             .form-box
                 .check__list.check__list__title
                     span.type-h3 Expandable Checkbox List
-                    img(src="/src/images/dropdown_arrow_up.svg" alt="Dropdown").dropdown-arrow
+                    img(src="images/dropdown_arrow_up.svg" alt="Dropdown").dropdown-arrow
                 form.check
                     label.check__button
                         input(type="checkbox").check__input
@@ -346,32 +346,35 @@ img(src="../src/images/logo_cl.svg" alt="Logo").logo-cl
             span.form-caption__title.type-h3 Bullet List
         .bullet-list
             .bullet-list__item
-                img(src="/src/images/ellipse.svg" alt="Item").dropdown-arrow
+                svg(width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg")
+                    ellipse(cx="5.21429" cy="5" rx="5.21429" ry="5" fill="#1F2041" fill-opacity="0.25")
                 span.bullet-list__text.type-body Нельзя с питомцами
             .bullet-list__item
-                img(src="/src/images/ellipse.svg" alt="Item").dropdown-arrow
+                svg(width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg")
+                    ellipse(cx="5.21429" cy="5" rx="5.21429" ry="5" fill="#1F2041" fill-opacity="0.25")
                 span.bullet-list__text.type-body Без вечеринок и мероприятий
             .bullet-list__item
-                img(src="/src/images/ellipse.svg" alt="Item").dropdown-arrow
+                svg(width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg")
+                    ellipse(cx="5.21429" cy="5" rx="5.21429" ry="5" fill="#1F2041" fill-opacity="0.25")
                 span.bullet-list__text.type-body Время прибытия — после 13:00,<br>а выезд до 12:00
     .form-elements-cell
         .form-wrapper
             .feature
-                img(src="/src/images/insert_emoticon.png" alt="Комфорт").feature__comfort
+                img(src="images/insert_emoticon.png" alt="Комфорт").feature__comfort
                 .feature__text
                     span.check__title Комфорт
                     span.type-body Шумопоглощающие стены
             hr.feature__line
         .form-wrapper
             .feature
-                img(src="/src/images/location_city.png" alt="Удобство").feature__convenience
+                img(src="images/location_city.png" alt="Удобство").feature__convenience
                 .feature__text
                     span.check__title Удобство
                     span.type-body Окно в каждой из спален
             hr.feature__line
     .review-form
         .review-form__user
-            img(src="/src/images/image.jpg" alt="Аватар").review-form__image
+            img(src="images/image.jpg" alt="Аватар").review-form__image
             .review-form__user-info
                 span.check__title Мурад Сарафанов
                 span.type-body 5 дней назад
